--- a/JJ Project Restaurant/Team10_ProjectClient/src/team10_projectclient/createreservation/mainmenu.form
+++ b/JJ Project Restaurant/Team10_ProjectClient/src/team10_projectclient/createreservation/mainmenu.form
@@ -102,11 +102,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Username"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jLabel2.setText(Team10_ProjectClient.fetchUsername());&#xd; "/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
         <Property name="text" type="java.lang.String" value="Profile"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton4MouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
