--- a/JJ Project Restaurant/Team10_ProjectClient/src/team10_projectclient/view/createreservation/reservationBooking.form
+++ b/JJ Project Restaurant/Team10_ProjectClient/src/team10_projectclient/view/createreservation/reservationBooking.form
@@ -374,6 +374,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTextField3MouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField3ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField4">
